# nordhold_calculator

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  RUNBOOK.md  TODO.md  analyze_banner_screenshots.py  banner_extractor.py  banners_data.json  banners_data.txt  banners_raw_data.json  extract_banner_data.py  extract_banners_ocr.py  interactive_banner_extractor.py  pyproject.toml
docs/: MENTOR_NOTES.md
runtime/exports/: nordhold_handoff_20260226_224906.manifest.json  nordhold_handoff_20260226_224906.top50.tsv  nordhold_handoff_20260226_224944.manifest.json
runtime/golden/: expected_combat_runtime_actions.json  expected_monte_carlo_seeded.json  expected_wave_eval.json  input_combat_runtime_actions.json  input_monte_carlo_seeded.json  input_wave_eval.json
runtime/logs/: nordhold-live-soak-20260226_190246.summary.json  nordhold-live-soak-20260226_193004.summary.json  nordhold-live-soak-20260226_220452.partial.json  nordhold-live-soak-20260226_220452.summary.json  nordhold_stop_t54.ps1  nordhold_t54_soak.ps1  (+2 more)
scripts/: build_nordhold_realtime_exe.ps1  nordhold_combat_deep_probe.py  nordhold_memory_scan.py  nordhold_promote_deep_probe_candidates.py  resolve_live_memory_candidate.ps1  run_nordhold_live_soak.ps1  start_nordhold_realtime.ps1  stop_nordhold_live_soak.ps1  stop_nordhold_realtime.ps1
tests/: test_api_contract.py  test_golden_regression.py  test_live_memory_v1.py  test_memory_scan_cli.py  test_promote_deep_probe_candidates.py  test_realtime_engine.py  test_replay_live.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+158 files in other folders)
